user registration set

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 PORT=5000
 MONGO_URI=mongodb://localhost:27017/whiter_server
+EMAIL_USER=muhammedrameespkl@gmail.com
+EMAIL_PASS=wqja nuah jzua sllb
+JWT_SUPERKEY="whiterwebsuperkey123"
