--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.2",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
     "validator": "^13.12.0"
   }
