some importent changes  when first work properties now not working and that fixed

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/whiter_server
-EMAIL_USER=muhammedrameespkl@gmail.com
-EMAIL_PASS=wqja nuah jzua sllb
+MONGO_URI=mongodb+srv://muhammedramees09876:whiter_ecom@cluster0.vflcr.mongodb.net/whiter_ecom?retryWrites=true&w=majority&appName=Cluster0
+# MONGO_URI=mongodb://localhost:27017/whiter_server
+EMAIL_USER="muhammedrameespkl@gmail.com"
+EMAIL_PASS="daoa dnfz nywr anqu"
 JWT_SUPERKEY="whiterwebsuperkey123"
