order product functions added but didnt checked , razorpay adding checking not completed

--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ MONGO_URI=mongodb+srv://muhammedramees09876:whiter_ecom@cluster0.vflcr.mongodb.n
 EMAIL_USER="muhammedrameespkl@gmail.com"
 EMAIL_PASS="daoa dnfz nywr anqu"
 JWT_SUPERKEY="whiterwebsuperkey123"
+RAZORPAY_KEY_ID="rzp_test_qT9FzPigGZLK02"
+RAZORPAY_KEY_SECRET="Wx1tqf5T2I3VgRC8DbkfsS3N"
