cloudinary  used for store images   product,catgeory image sections all changed

--- a/.env
+++ b/.env
@@ -6,3 +6,6 @@ EMAIL_PASS="daoa dnfz nywr anqu"
 JWT_SUPERKEY="whiterwebsuperkey123"
 RAZORPAY_KEY_ID="rzp_test_qT9FzPigGZLK02"
 RAZORPAY_KEY_SECRET="Wx1tqf5T2I3VgRC8DbkfsS3N"
+CLOUDINARY_CLOUD_NAME=dpfdbwql9
+CLOUDINARY_API_KEY=297256271117926
+CLOUDINARY_API_SECRET=Iw5FYy_Nfb5A0fJBMJo7pJGVM7w
